--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,72 +1,84 @@
 {
-  "enabled": true,
-  "extends": [
-    "group:recommended",
-    "workarounds:all"
+  enabled: true,
+  extends: [
+    'group:recommended',
+    'workarounds:all',
   ],
-  "dependencyDashboard": "true",
-  "branchConcurrentLimit": 0,
-  "prConcurrentLimit": 0,
-  "prHourlyLimit": 0,
-  "rebaseWhen": "conflicted",
-  "packageRules": [
+  dependencyDashboard: true,
+  branchConcurrentLimit: 0,
+  prConcurrentLimit: 0,
+  prHourlyLimit: 0,
+  rebaseWhen: 'conflicted',
+  packageRules: [
     // Define repositories
     {
-      "matchDatasources": ["maven"],
-      "registryUrls": [
+      matchDatasources: [
+        'maven',
+      ],
+      registryUrls: [
         // Default kernel repositories
-        "https://repo.maven.apache.org/maven2/",
-        "https://jitpack.io/",
+        'https://repo.maven.apache.org/maven2/',
+        'https://jitpack.io/',
         // Custom repositories from descriptors must be added here
-        "https://oss.sonatype.org/service/local/repo_groups/public/content",
-        "https://repo.osgeo.org/repository/release",
-        "https://repo.kotlin.link",
-        "https://maven.pkg.jetbrains.space/kotlin/p/kotlin/kotlin-js-wrappers",
-        "https://s01.oss.sonatype.org/content/repositories/snapshots",
-        "https://packages.jetbrains.team/maven/p/kds/kotlin-ds-maven",
-      ]
+        'https://oss.sonatype.org/service/local/repo_groups/public/content',
+        'https://repo.osgeo.org/repository/release',
+        'https://repo.kotlin.link',
+        'https://maven.pkg.jetbrains.space/kotlin/p/kotlin/kotlin-js-wrappers',
+        'https://s01.oss.sonatype.org/content/repositories/snapshots',
+        'https://packages.jetbrains.team/maven/p/kds/kotlin-ds-maven',
+      ],
     },
     // Ignore -dev versions, because in maven 1.0 < 1.0-dev
     {
-      "matchPackagePatterns": [".*"],
-      "allowedVersions": "!/[-.]dev/",
+      allowedVersions: '!/[-.]dev/',
+      matchPackageNames: [
+        '/.*/',
+      ],
     },
     // Allow -dev versions if it's already using one
     {
-      "matchCurrentValue": "/[-.]dev/",
-      "allowedVersions": "/.*/",
-    },
-    // Ignore pushed by mistake version
-    {
-      "matchPackageNames": ["org.jetbrains.kotlinx:dataframe"],
-      "allowedVersions": "!/[-.]dev|^1548$|^1727$/",
+      matchCurrentValue: '/[-.]dev/',
+      allowedVersions: '/.*/',
     },
     // Ignore pushed by mistake versions
     {
-      "matchPackageNames": ["com.github.gabrielfeo:gradle-enterprise-api-kotlin"],
-      "allowedVersions": "!/^0\\.999.*$/",
+      matchPackageNames: [
+        'org.jetbrains.kotlinx:dataframe',
+      ],
+      allowedVersions: '!/[-.]dev|^1548$|^1727$/',
+    },
+    // Ignore pushed by mistake versions
+    {
+      matchPackageNames: [
+        'com.github.gabrielfeo:gradle-enterprise-api-kotlin',
+      ],
+      allowedVersions: '!/^0\\.999.*$/',
     },
   ],
-  "regexManagers": [
+  customManagers: [
     // Matches dependencies with hardcoded versions (no interpolated properties)
     {
-      "datasourceTemplate": "maven",
-      "versioningTemplate": "maven",
-      "fileMatch": [".*\\.json5"],
-      "matchStrings": [
-        // https://regex101.com/r/mex9HU/1
+      customType: 'regex',
+      datasourceTemplate: 'maven',
+      versioningTemplate: 'maven',
+      fileMatch: [
+        '.*\\.json5',
+      ],
+      matchStrings: [
         '^\\s*"(?<depName>[^":\\$]+:[^":\\$]+):(?<currentValue>[^":\\$]+)"',
-      ]
+      ],
     },
     // Matches properties having a "*-renovate-hint" property below them with value "update: package=group:artifact"
     {
-      "datasourceTemplate": "maven",
-      "versioningTemplate": "maven",
-      "fileMatch": [".*\\.json"],
-      "matchStrings": [
-        // https://regex101.com/r/7ESmC8/6
+      customType: 'regex',
+      datasourceTemplate: 'maven',
+      versioningTemplate: 'maven',
+      fileMatch: [
+        '.*\\.json',
+      ],
+      matchStrings: [
         '(?:{ *"name": *)?".+?"[:,] *(?:"value": *)?"(?<currentValue>.+?)"(?: *})?,\\s*(?:{ *"name": *)?"\\S+-renovate-hint"[:,] *(?:"value": *)?"update: +package=(?<depName>\\S+?)"',
-      ]
+      ],
     },
   ],
 }
