--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -30,7 +30,7 @@
     },
     // Ignore -SNAPSHOT versions
     {
-      allowedVersions: '!/[-.](SNAPSHOT|snapshot)/',
+      allowedVersions: '!/.*[-.]((SNAPSHOT)|(snapshot))$/',
       matchPackageNames: [
         '/.*/',
       ],
