--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -28,16 +28,9 @@
         'https://packages.jetbrains.team/maven/p/kds/kotlin-ds-maven',
       ],
     },
-    // Ignore -SNAPSHOT versions
+    // Ignore -dev and -snapshot versions, because in maven 1.0 < 1.0-dev
     {
-      allowedVersions: '!/.*[-.]((SNAPSHOT)|(snapshot))$/',
-      matchPackageNames: [
-        '/.*/',
-      ],
-    },
-    // Ignore -dev versions, because in maven 1.0 < 1.0-dev
-    {
-      allowedVersions: '!/[-.]dev/',
+      allowedVersions: '!/[-.]((dev)|(SNAPSHOT)|(snapshot))/',
       matchPackageNames: [
         '/.*/',
       ],
