--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -34,6 +34,7 @@
       matchPackageNames: [
         '/.*/',
       ],
+      updateTypes: ["major", "minor", "patch"]
     },
     // Allow -dev versions if it's already using one
     {
