--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -9,6 +9,7 @@
   prConcurrentLimit: 0,
   prHourlyLimit: 0,
   rebaseWhen: 'conflicted',
+  ignoreUnstable: false,
   packageRules: [
     // Define repositories
     {
