Enable auto-merge for selected Kotlin Jupyter artifacts in renovate.json5

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -64,6 +64,19 @@
       ],
       allowedVersions: '!/^0\\.999.*$/',
     },
+    // Auto-merge for selected artifacts
+    {
+      matchDatasources: ['maven'],
+      matchPackageNames: [
+        'org.jetbrains.kotlinx:kotlin-jupyter-database',
+        'org.jetbrains.kotlinx:kotlin-jupyter-intellij-platform',
+        'org.jetbrains.kotlinx:kotlin-jupyter-ktor-client',
+        'org.jetbrains.kotlinx:kotlin-jupyter-serialization',
+        'org.jetbrains.kotlinx:kotlin-jupyter-widgets-jupyter',
+      ],
+      automerge: true,
+      automergeType: 'pr',
+    },
   ],
   customManagers: [
     // Matches dependencies with hardcoded versions (no interpolated properties)
