Ignore tests in renovate.json5

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -10,6 +10,7 @@
   prHourlyLimit: 0,
   rebaseWhen: 'conflicted',
   ignoreUnstable: false,
+  ignoreTests: true,
   respectLatest: false,
   packageRules: [
     // Define repositories
